--- a/community/index.html
+++ b/community/index.html
@@ -495,7 +495,7 @@
         }
 
         .waiting-message {
-            background: linear-gradient(135deg, #e4ff6b, #c2df20);
+            background: linear-gradient(135deg, #cfb74c, #ccaf09);
         }
 
         .success-message.show, .error-message.show, .waiting-message.show {
