fix/text-change

--- a/compliance/index.html
+++ b/compliance/index.html
@@ -77,7 +77,7 @@ subnav:
         <div class="badge">
           <div class="badge-icon">📋</div>
           <div class="badge-text">
-            <h4 class="content-info-header-alt-alt">Ready to Use</h4>
+            <h4 class="content-info-header-alt-alt">Instant Download</h4>
             <p class="section-text-alt">Immediately available</p>
           </div>
         </div>
