social-work-waitlist-option

--- a/community/index.html
+++ b/community/index.html
@@ -747,6 +747,7 @@
                                     <option value="occupational-therapist">Occupational Therapist</option>
                                     <option value="physiotherapist">Physiotherapist</option>
                                     <option value="psychologist">Psychologist</option>
+                                    <option value="social-worker">Social Worker</option>
                                     <option value="speech-pathologist">Speech Pathologist</option>
                                     <!-- <option value="dietitian">Dietitian</option> -->
                                     <!-- <option value="podiatrist">Podiatrist</option> -->
