--- a/comparisons/index.html
+++ b/comparisons/index.html
@@ -5,19 +5,21 @@ description: Compare AI scribe companies and find the best fit for your therapy 
 ---
 
 <div class="container">
-  <header class="title-container">
-    <div class="title-content-centered">
-      <h1 class="main-title">
+  <header class="page-header page-header--single">
+    <div class="page-header__content">
+      <h1>
         AI Scribe Company
         <span style="text-decoration: underline">Comparisons</span>
       </h1>
-      <p class="main-subtitle">
+      <p>
         Compare AI scribe companies and find the best fit for your therapy and
         clinical documentation needs.
       </p>
     </div>
   </header>
+</div>
 
+<div class="container">
   <section class="section table-section">
     <h2 id="comparison-table" class="sr-only">Comparison Table</h2>
     <iframe
