--- a/provisional-psychologists/index.html
+++ b/provisional-psychologists/index.html
@@ -55,7 +55,7 @@ description: Carefully curated AI scribe tools to help provisional psychologists
         class="max-w-50"
         style="border-radius: 20px;"
       />
-      <article class="card card-alt card-bordered prov-psych-card">
+      <article class="card card--transparent card-bordered prov-psych-card">
         <div class="mb-8">
           <h3 class="card-title">${company.name}</h3>
           <ul class="card-list">
@@ -77,12 +77,14 @@ description: Carefully curated AI scribe tools to help provisional psychologists
 </script>
 
 <div class="container container-short">
-  <header class="title-container mb-05 mt-12">
-    <div class="title-content title-content-centered">
-      <h1 class="main-title main-title"><u>Free</u> AI Scribes</h1>
-      <p class="main-subtitle">for Provisional Psychologists</p>
+  <header class="page-header page-header--two-col">
+    <div class="page-header__content">
+      <h1><u>Free</u> AI Scribes</h1>
+      <p>for Provisional Psychologists</p>
     </div>
-    <img src="../assets/images/affiliate/affiliate-header.png" alt="Affiliate Header" class="max-w-50">
+    <div class="page-header__media">
+      <img src="../assets/images/affiliate/affiliate-header.png" alt="Affiliate Header" class="max-w-50">
+    </div>
   </header>
 
   <section class="card mb-24">
