--- a/standards/index.html
+++ b/standards/index.html
@@ -5,9 +5,10 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 ---
 
 <!-- Header -->
-<header class="title-container">
-  <div class="title-content title-content-centered">
-    <h1 class="main-title">AI Ethical Standards</h1>
+<div class="container">
+<header class="page-header page-header--single">
+  <div class="page-header__content">
+    <h1>AI Ethical Standards</h1>
     <button
       class="btn"
       aria-label="Download PDF version"
@@ -25,6 +26,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
     </button>
   </div>
 </header>
+</div>
 
 <!-- Introduction -->
 <section class="container">
