--- a/provisional-psychologists/index.html
+++ b/provisional-psychologists/index.html
@@ -97,6 +97,6 @@ description: Carefully curated AI scribe tools to help provisional psychologists
     </p>
   </section>
 
-  <section id="prov-psych-container" class="container-alt" style="margin-bottom: 5rem">
+  <section id="prov-psych-container" class="container-short" style="margin-bottom: 5rem">
   </section>
 </div>
