--- a/calculator/index.html
+++ b/calculator/index.html
@@ -42,7 +42,7 @@ title: AI Scribe Savings Calculator
             <div class="card-icon">⏰</div>
             <h2 class="card-title">Time Savings</h2>
           </div>
-          <div class="auto-grid-300">
+          <div class="results-grid-140">
             <div class="card-alt card-alt-calculator">
               <div class="text-sm text-muted">Daily</div>
               <div class="text-lg" id="daily-time">-</div>
@@ -69,7 +69,7 @@ title: AI Scribe Savings Calculator
             <div class="card-icon">💰</div>
             <h2 class="card-title">Monetary Value</h2>
           </div>
-          <div class="auto-grid-300">
+          <div class="results-grid-140">
             <div class="card-alt card-alt-calculator">
               <div class="text-sm text-muted">Daily</div>
               <div class="text-lg" id="daily-money">-</div>
