--- a/standards/index.html
+++ b/standards/index.html
@@ -15,7 +15,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
       onclick="downloadPDF()"
       style="max-width: 200px; margin: 0 auto"
     >
-      <svg class="icon icon-sm" viewBox="0 0 24 24" aria-hidden="true">
+      <svg class="icon-sm" viewBox="0 0 24 24" aria-hidden="true">
         <path
           stroke-linecap="round"
           stroke-linejoin="round"
