--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ subnav:
           </h4>
           <div class="text-center mb-15">
             <span class="price-lg">$770</span>
-            <p class="subtitle--muted">(Inc GST)</p>
+            <p>(Inc GST)</p>
           </div>
           <ul class="text-muted list-unstyled mb-2">
             <li class="flex items-center gap-05 mb-075">
@@ -411,7 +411,7 @@ subnav:
           <h4 class="text-gold text-2xl mb-1 text-center">Ongoing Assistance</h4>
           <div class="text-center mb-15">
             <span class="price-range">$1,000-2,000</span>
-            <p class="subtitle--muted">per month (by negotiation)</p>
+            <p>per month (by negotiation)</p>
           </div>
           <ul class="sectionlist-unstyled mb-15">
             <li class="flex items-center gap-05 mb-075">
