--- a/compliance/index.html
+++ b/compliance/index.html
@@ -177,7 +177,7 @@ subnav:
 
 <!-- Legal Disclaimers -->
 <section id="legal" class="section bg-gradient bg-gradient-4">
-  <div class="container container-short">
+  <div class="container">
     <h2 class="section-title">Important Legal Information</h2>
     <div class="content-container">
       <div class="content-section">
