--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ subnav:
 </div>
 <!-- About Section -->
 <section id="about" class="section bg-gradient">
-  <div class="container container-short">
+  <div class="container">
     <h2 class="section-title">
       About <span class="section-title-accent">David Lopis</span>
     </h2>
@@ -57,9 +57,12 @@ subnav:
 
     <div class="cards-grid">
       <article class="card">
+        <div class="flex">
+          <h3 class="card-title">Speaking and Training</h3>
+          <span class="card-icon">&#128483;</span>
+        </div>
         
-        <h3 class="card-title">Speaking and Training<span style=>&#128483;</span></h3>
-        
+
         <p class="card-text">
           Keynote speaker at major conferences including APS, AAPi, and ACPA
           events
@@ -87,7 +90,7 @@ subnav:
 
 <!-- Speaking & Events Section -->
 <section id="speaking" class="section bg-gradient bg-gradient-2">
-  <div class="container container-short">
+  <div class="container">
     <h2 class="section-title">
       Speaking and <span class="section-title-accent">Events</span>
     </h2>
@@ -175,7 +178,7 @@ subnav:
 
 <!-- Media Section -->
 <section id="media" class="section bg-gradient bg-gradient-3">
-  <div class="container container-short" style="max-width: 800px">
+  <div class="container" style="max-width: 800px">
     <h2 class="section-title">
       Media and <span class="section-title-accent">Interviews</span>
     </h2>
@@ -227,7 +230,7 @@ subnav:
 
 <!-- Services Section -->
 <section id="services" class="section bg-gradient bg-gradient-4">
-  <div class="container container-short">
+  <div class="container">
     <h2 class="section-title">
       Our <span class="section-title-accent">Services</span>
     </h2>
