--- a/provisional-psychologists/index.html
+++ b/provisional-psychologists/index.html
@@ -76,7 +76,7 @@ description: Carefully curated AI scribe tools to help provisional psychologists
   document.addEventListener("DOMContentLoaded", renderCompanies);
 </script>
 
-<div class="container container-short">
+<div class="container">
   <header class="page-header page-header--two-col">
     <div class="page-header__content">
       <h1><u>Free</u> AI Scribes</h1>
@@ -97,6 +97,6 @@ description: Carefully curated AI scribe tools to help provisional psychologists
     </p>
   </section>
 
-  <section id="prov-psych-container" class="container-short" style="margin-bottom: 5rem">
+  <section id="prov-psych-container" class="container" style="margin-bottom: 5rem">
   </section>
 </div>
