major-compliance-pack

--- a/compliance/index.html
+++ b/compliance/index.html
@@ -51,44 +51,42 @@ subnav:
 <section id="about" class="section section-alt bg-gradient">
   <div class="container">
     <h2 class="section-title">
-      About <span class="section-title-accent">the AI Compliance Pack</span>
+      About the AI Compliance Pack</span>
     </h2>
-    <div class="about-content">
-      <div class="about-text">
-        <h3 class="content-info-header-alt">
-          Now immediately available upon purchase
-        </h3>
-        <p class="section-text">
-          The <strong>AI Compliance Pack</strong> is part of your AI compliance
-          essentials for psychologists who currently use or are planning to
-          implement AI in their practices. It serves as a cost-effective
-          alternative to independently developing compliance materials. This
-          purchase item for a single purchaser for their own access
-          <strong>only</strong>
-        </p>
-      </div>
+    <div class="about-text text-center">
+      <h3 class="text-gold">
+        Now immediately available upon purchase
+      </h3>
+      <p class="section-text">
+        The <strong>AI Compliance Pack</strong> is part of your AI compliance
+        essentials for psychologists who currently use or are planning to
+        implement AI in their practices. It serves as a cost-effective
+        alternative to independently developing compliance materials. This
+        purchase item for a single purchaser for their own access
+        <strong>only</strong>
+      </p>
+    </div>
 
-      <div class="trust-badges">
-        <div class="badge">
-          <div class="badge-icon">🛡️</div>
-          <div class="badge-text">
-            <h4 class="content-info-header-alt">Legal Compliance</h4>
-            <p class="section-text-alt">Drafted by PGC Legal Pty Ltd</p>
-          </div>
+    <div class="trust-badges-grid">
+      <div class="card trust-badge">
+        <div class="trust-badge-icon">🛡️</div>
+        <div class="trust-badge-content">
+          <h4 class="trust-badge-title">Legal Compliance</h4>
+          <p class="trust-badge-desc">Drafted by PGC Legal Pty Ltd</p>
         </div>
-        <div class="badge">
-          <div class="badge-icon">📋</div>
-          <div class="badge-text">
-            <h4 class="content-info-header-alt-alt">Instant Download</h4>
-            <p class="section-text-alt">Immediately available</p>
-          </div>
+      </div>
+      <div class="card trust-badge">
+        <div class="trust-badge-icon">📋</div>
+        <div class="trust-badge-content">
+          <h4 class="trust-badge-title">Instant Download</h4>
+          <p class="trust-badge-desc">Immediately available</p>
         </div>
-        <div class="badge">
-          <div class="badge-icon">🇦🇺</div>
-          <div class="badge-text">
-            <h4 class="content-info-header-alt-alt">Australian Standards</h4>
-            <p class="section-text-alt">Consistent with regulations</p>
-          </div>
+      </div>
+      <div class="card trust-badge">
+        <div class="trust-badge-icon">🇦🇺</div>
+        <div class="trust-badge-content">
+          <h4 class="trust-badge-title">Australian Standards</h4>
+          <p class="trust-badge-desc">Consistent with regulations</p>
         </div>
       </div>
     </div>
@@ -100,32 +98,30 @@ subnav:
   <div class="container">
     <h2 class="section-title">Pack Contents</h2>
     <div class="contents-grid">
-      <div class="content-item">
+      <div class="card content-item">
         <div class="content-icon">📄</div>
-        <h3 class="content-info-header-alt">AI Policy Template</h3>
-        <p class="section-text">drafted by PGC Legal Pty Ltd</p>
+        <h3 class="content-item-title">AI Policy Template</h3>
+        <p class="content-item-desc">drafted by PGC Legal Pty Ltd</p>
       </div>
-      <div class="content-item">
+      <div class="card content-item">
         <div class="content-icon">🔒</div>
-        <h3 class="content-info-header-alt">Privacy Policy Template</h3>
-        <p class="section-text">drafted by PGC Legal Pty Ltd</p>
+        <h3 class="content-item-title">Privacy Policy Template</h3>
+        <p class="content-item-desc">drafted by PGC Legal Pty Ltd</p>
       </div>
-      <div class="content-item">
+      <div class="card content-item">
         <div class="content-icon">✅</div>
-        <h3 class="content-info-header-alt">Consent Form for AI use</h3>
-        <p class="section-text">drafted by PGC Legal Pty Ltd</p>
+        <h3 class="content-item-title">Consent Form for AI use</h3>
+        <p class="content-item-desc">drafted by PGC Legal Pty Ltd</p>
       </div>
-      <div class="content-item">
+      <div class="card content-item">
         <div class="content-icon">📋</div>
-        <h3 class="content-info-header-alt">AI Implementation Checklist</h3>
-        <p class="section-text">drafted by PGC Legal Pty Ltd</p>
+        <h3 class="content-item-title">AI Implementation Checklist</h3>
+        <p class="content-item-desc">drafted by PGC Legal Pty Ltd</p>
       </div>
-      <div class="content-item">
+      <div class="card content-item">
         <div class="content-icon">📝</div>
-        <h3 class="content-info-header-alt">
-          Session Transcript Recommendation
-        </h3>
-        <p class="section-text">
+        <h3 class="content-item-title">Session Transcript Recommendation</h3>
+        <p class="content-item-desc">
           Guidance on inclusion of session transcript/audio file in clinical
           notes drafted by PGC Legal Pty Ltd
         </p>
@@ -139,14 +135,14 @@ subnav:
   <div class="container">
     <h2 class="section-title">Pricing Options</h2>
     <div class="pricing-grid">
-      <div class="pricing-card featured">
+      <div class="card pricing-card">
         <h3 class="pricing-card-header">
           Individual Pack <br />
           $199 (inc GST)
         </h3>
         <p class="section-text">Single purchaser access only</p>
       </div>
-      <div class="pricing-card featured">
+      <div class="card pricing-card">
         <h3 class="pricing-card-header">Medium Practice Bundle</h3>
         <p class="section-text">2-5 Practitioners</p>
         <a
@@ -155,7 +151,7 @@ subnav:
           >Get Quote</a
         >
       </div>
-      <div class="pricing-card featured">
+      <div class="card pricing-card">
         <h3 class="pricing-card-header">Large Practice Package</h3>
         <p class="section-text">6-10 Practitioners</p>
 
@@ -179,16 +175,14 @@ subnav:
 <section id="legal" class="section bg-gradient bg-gradient-4">
   <div class="container">
     <h2 class="section-title">Important Legal Information</h2>
-    <div class="content-container">
-      <div class="content-section">
-        <h3>Information is Not Legal Advice</h3>
-        <p class="content-section-text">
+    <div class="flex-col gap-2">
+      <div class="card no-hover card--transparent">
+        <h3 class="text-gold">Information is Not Legal Advice</h3>
+        <p class="section-text m-0 text-md">
           The above information, content and template documents (together
           <strong>'the content'</strong>) are the intellectual property of PGC
           Legal Pty Ltd and the provision of them by Psychology Squared does not
-          constitute legal advice, and is provided for information only.
-        </p>
-        <p class="content-section-text">
+          constitute legal advice, and is provided for information only.<br><br>
           The content is intended only to provide a summary and general overview
           on matters of interest. It is not intended to be comprehensive. It is
           not intended to be a substitute for legal advice, and should not be
@@ -199,14 +193,12 @@ subnav:
         </p>
       </div>
 
-      <div class="content-section">
-        <h3>Limitation of Liability</h3>
-        <p class="content-section-text">
+      <div class="card no-hover card--transparent">
+        <h3 class="text-gold">Limitation of Liability</h3>
+        <p class="section-text m-0 text-md">
           Neither PGC Legal Pty Ltd nor Psychology Squared are responsible to
           you or anyone else for any loss suffered in connection with the use of
-          the content.
-        </p>
-        <p class="content-section-text">
+          the content.<br><br>
           PGC Legal Pty Ltd and Psychology Squared makes no warranties or
           representations about the content. We exclude, to the maximum extent
           permitted by law, any liability which may arise as a result of the use
@@ -219,37 +211,33 @@ subnav:
         </p>
       </div>
 
-      <div class="content-section">
-        <h3>No Solicitor / Client relationship</h3>
-        <p class="content-section-text">
+      <div class="card no-hover card--transparent">
+        <h3 class="text-gold">No Solicitor / Client relationship</h3>
+        <p class="section-text m-0 text-md">
           Your use of this content is not intended to create, nor does it
           create, a solicitor-client relationship between you and PGC Legal Pty
           Ltd.
-        </p>
-        <p class="content-section-text">
           Liability limited by a scheme approved under Professional Standards
           Legislation.
         </p>
       </div>
 
-      <div class="content-section">
-        <h3>Terms and Conditions</h3>
-        <p class="content-section-text">
+      <div class="card no-hover card--transparent">
+        <h3 class="text-gold">Terms and Conditions</h3>
+        <p class="section-text m-0 text-md">
           By purchasing you agree to the terms and conditions available here:
           <a
-            class="content-section-text"
             href="https://psychologysquared.com.au/termsandconditions"
             target="_blank"
-            >https://psychologysquared.com.au/termsandconditions</a
+            >Terms and Conditions</a
           >
         </p>
-        <p class="content-section-text">
+        <p class="section-text m-0 text-md">
           By purchasing you agree to the AI standards:
           <a
-            class="content-section-text"
             href="https://psychologysquared.com.au/ai-standards"
             target="_blank"
-            >https://psychologysquared.com.au/ai-standards</a
+            >AI Standards</a
           >
         </p>
       </div>
@@ -261,23 +249,20 @@ subnav:
 <section id="contact" class="section section-alt bg-gradient bg-gradient-5">
   <div class="container">
     <h2 class="section-title">Contact Information</h2>
-    <div class="contact-content">
-      <p>This is a product by <strong>Psychology Squared</strong></p>
-      <div class="contact-details">
-        <div class="contact-item">
-          <strong>Mobile:</strong> <a href="tel:0423048009">0423 048 009</a>
+    <div class="contact-info-container">
+      <p class="text-center mb-2">This is a product by <strong>Psychology Squared</strong></p>
+      <div class="contact-info-list">
+        <div class="contact-info-item">
+          <span class="contact-info-label">Mobile:</span>
+          <a href="tel:0423048009">0423 048 009</a>
         </div>
-        <div class="contact-item">
-          <strong>Email:</strong>
-          <a href="mailto:hello@psychologysquared.com.au"
-            >hello@psychologysquared.com.au</a
-          >
+        <div class="contact-info-item">
+          <span class="contact-info-label">Email:</span>
+          <a href="mailto:hello@psychologysquared.com.au">hello@psychologysquared.com.au</a>
         </div>
-        <div class="contact-item">
-          <strong>Facebook Group:</strong>
-          <a href="https://www.facebook.com/groups/austpsychai" target="_blank"
-            >Australian Psychology AI Community</a
-          >
+        <div class="contact-info-item">
+          <span class="contact-info-label">Facebook Group:</span>
+          <a href="https://www.facebook.com/groups/austpsychai" target="_blank">Australian Psychology AI Community</a>
         </div>
       </div>
     </div>
