--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ subnav:
 <section id="about" class="section bg-gradient">
   <div class="container">
     <h2 class="section-title">
-      About <span class="section-title-accent">David Lopis</span>
+      About <span class="text-gold">David Lopis</span>
     </h2>
     <p class="section-text">
       Australian registered psychologist, AI consultant, and board-approved
@@ -94,7 +94,7 @@ subnav:
 <section id="speaking" class="section bg-gradient bg-gradient-2">
   <div class="container">
     <h2 class="section-title">
-      Speaking and <span class="section-title-accent">Events</span>
+      Speaking and <span class="text-gold">Events</span>
     </h2>
     <p class="section-subtitle">
       Leading AI training and thought leadership across Australia's top
@@ -182,7 +182,7 @@ subnav:
 <section id="media" class="section bg-gradient bg-gradient-3">
   <div class="container" style="max-width: 800px">
     <h2 class="section-title">
-      Media and <span class="section-title-accent">Interviews</span>
+      Media and <span class="text-gold">Interviews</span>
     </h2>
 
     <div class="two-col-grid">
@@ -234,7 +234,7 @@ subnav:
 <section id="services" class="section bg-gradient bg-gradient-4">
   <div class="container">
     <h2 class="section-title">
-      Our <span class="section-title-accent">Services</span>
+      Our <span class="text-gold">Services</span>
     </h2>
     <p class="section-subtitle">
       AI discussion for mental health professionals
@@ -302,7 +302,7 @@ subnav:
 <!-- Billing & Pricing Section -->
 <section id="pricing" class="section bg-gradient bg-gradient-5 gap-2">
   <h2 class="section-title">
-    Billing and <span class="section-title-accent">Pricing</span>
+    Billing and <span class="text-gold">Pricing</span>
   </h2>
   <p class="section-subtitle">
     Transparent pricing for all professional AI consulting services
