--- a/standards/index.html
+++ b/standards/index.html
@@ -89,7 +89,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 <section id="ai-standards" class="section">
   <div class="container">
     <h2 class="section-title">AI Standards</h2>
-    <div class="content-container">
+    <div class="flex-col gap-2">
       <article class="content-section" id="accountability">
         <h3>1. Accountability</h3>
         <p class="content-section-text">
