--- a/compliance/index.html
+++ b/compliance/index.html
@@ -38,10 +38,10 @@ subnav:
   </div>
   <div class="page-header__media">
     <div class="compliance-symbols">
-      <div class="symbol shield">🛡️</div>
-      <div class="symbol document">📋</div>
-      <div class="symbol legal">⚖️</div>
-      <div class="symbol australia">🇦🇺</div>
+      <div class="card card-icon">🛡️</div>
+      <div class="card card-icon">📋</div>
+      <div class="card card-icon">⚖️</div>
+      <div class="card card-icon text-center">🇦🇺</div>
     </div>
   </div>
 </header>
@@ -53,7 +53,7 @@ subnav:
     <h2 class="section-title">
       About the AI Compliance Pack</span>
     </h2>
-    <div class="about-text text-center">
+    <div class="max-w-900 mx-auto mb-2 text-center">
       <h3 class="text-gold">
         Now immediately available upon purchase
       </h3>
@@ -67,26 +67,26 @@ subnav:
       </p>
     </div>
 
-    <div class="trust-badges-grid">
-      <div class="card trust-badge">
-        <div class="trust-badge-icon">🛡️</div>
-        <div class="trust-badge-content">
-          <h4 class="trust-badge-title">Legal Compliance</h4>
-          <p class="trust-badge-desc">Drafted by PGC Legal Pty Ltd</p>
+    <div class="grid-3 mt-2">
+      <div class="card no-hover flex gap-1">
+        <div class="card-icon card-icon--shrink">🛡️</div>
+        <div class="flex-col gap-025">
+          <h4 class="card-title">Legal Compliance</h4>
+          <p class="card-desc">Drafted by PGC Legal Pty Ltd</p>
         </div>
       </div>
-      <div class="card trust-badge">
-        <div class="trust-badge-icon">📋</div>
-        <div class="trust-badge-content">
-          <h4 class="trust-badge-title">Instant Download</h4>
-          <p class="trust-badge-desc">Immediately available</p>
+      <div class="card no-hover flex  gap-1">
+        <div class="card-icon card-icon--shrink">📋</div>
+        <div class="flex-col gap-025">
+          <h4 class="card-title">Instant Download</h4>
+          <p class="card-desc">Immediately available</p>
         </div>
       </div>
-      <div class="card trust-badge">
-        <div class="trust-badge-icon">🇦🇺</div>
-        <div class="trust-badge-content">
-          <h4 class="trust-badge-title">Australian Standards</h4>
-          <p class="trust-badge-desc">Consistent with regulations</p>
+      <div class="card no-hover flex gap-1">
+        <div class="card-icon card-icon--shrink">🇦🇺</div>
+        <div class="flex-col gap-025">
+          <h4 class="card-title">Australian Standards</h4>
+          <p class="card-desc">Consistent with regulations</p>
         </div>
       </div>
     </div>
@@ -97,31 +97,31 @@ subnav:
 <section id="contents" class="section bg-gradient bg-gradient-2">
   <div class="container">
     <h2 class="section-title">Pack Contents</h2>
-    <div class="contents-grid">
-      <div class="card content-item">
-        <div class="content-icon">📄</div>
-        <h3 class="content-item-title">AI Policy Template</h3>
-        <p class="content-item-desc">drafted by PGC Legal Pty Ltd</p>
+    <div class="grid-3 mb-2">
+      <div class="card no-hover text-center flex-col items-center">
+        <div class="card-icon card-icon--large">📄</div>
+        <h3 class="card-title">AI Policy Template</h3>
+        <p class="card-desc">drafted by PGC Legal Pty Ltd</p>
       </div>
-      <div class="card content-item">
-        <div class="content-icon">🔒</div>
-        <h3 class="content-item-title">Privacy Policy Template</h3>
-        <p class="content-item-desc">drafted by PGC Legal Pty Ltd</p>
+      <div class="card no-hover text-center flex-col items-center">
+        <div class="card-icon card-icon--large">🔒</div>
+        <h3 class="card-title">Privacy Policy Template</h3>
+        <p class="card-desc">drafted by PGC Legal Pty Ltd</p>
       </div>
-      <div class="card content-item">
-        <div class="content-icon">✅</div>
-        <h3 class="content-item-title">Consent Form for AI use</h3>
-        <p class="content-item-desc">drafted by PGC Legal Pty Ltd</p>
+      <div class="card no-hover text-center flex-col items-center">
+        <div class="card-icon card-icon--large">✅</div>
+        <h3 class="card-title">Consent Form for AI use</h3>
+        <p class="card-desc">drafted by PGC Legal Pty Ltd</p>
       </div>
-      <div class="card content-item">
-        <div class="content-icon">📋</div>
-        <h3 class="content-item-title">AI Implementation Checklist</h3>
-        <p class="content-item-desc">drafted by PGC Legal Pty Ltd</p>
+      <div class="card no-hover text-center flex-col items-center">
+        <div class="card-icon card-icon--large">📋</div>
+        <h3 class="card-title">AI Implementation Checklist</h3>
+        <p class="card-desc">drafted by PGC Legal Pty Ltd</p>
       </div>
-      <div class="card content-item">
-        <div class="content-icon">📝</div>
-        <h3 class="content-item-title">Session Transcript Recommendation</h3>
-        <p class="content-item-desc">
+      <div class="card no-hover text-center flex-col items-center">
+        <div class="card-icon card-icon--large">📝</div>
+        <h3 class="card-title">Session Transcript Recommendation</h3>
+        <p class="card-desc">
           Guidance on inclusion of session transcript/audio file in clinical
           notes drafted by PGC Legal Pty Ltd
         </p>
@@ -134,16 +134,16 @@ subnav:
 <section id="pricing" class="section section-alt bg-gradient bg-gradient-3">
   <div class="container">
     <h2 class="section-title">Pricing Options</h2>
-    <div class="pricing-grid">
-      <div class="card pricing-card">
-        <h3 class="pricing-card-header">
+    <div class="grid-3 mb-2">
+      <div class="card text-center">
+        <h3 class="card-title card-title--large">
           Individual Pack <br />
           $199 (inc GST)
         </h3>
         <p class="section-text">Single purchaser access only</p>
       </div>
-      <div class="card pricing-card">
-        <h3 class="pricing-card-header">Medium Practice Bundle</h3>
+      <div class="card text-center">
+        <h3 class="card-title card-title--large">Medium Practice Bundle</h3>
         <p class="section-text">2-5 Practitioners</p>
         <a
           href="mailto:david@psychologysquared.com.au?subject=Medium Practice Bundle Quote"
@@ -151,8 +151,8 @@ subnav:
           >Get Quote</a
         >
       </div>
-      <div class="card pricing-card">
-        <h3 class="pricing-card-header">Large Practice Package</h3>
+      <div class="card text-center">
+        <h3 class="card-title card-title--large">Large Practice Package</h3>
         <p class="section-text">6-10 Practitioners</p>
 
         <a
@@ -249,22 +249,21 @@ subnav:
 <section id="contact" class="section section-alt bg-gradient bg-gradient-5">
   <div class="container">
     <h2 class="section-title">Contact Information</h2>
-    <div class="contact-info-container">
+
       <p class="text-center mb-2">This is a product by <strong>Psychology Squared</strong></p>
-      <div class="contact-info-list">
-        <div class="contact-info-item">
-          <span class="contact-info-label">Mobile:</span>
+      <div class="flex-col gap-2">
+        <div class="card-icon--shrink flex justify-between items-center">
+          <span>Mobile:</span>
           <a href="tel:0423048009">0423 048 009</a>
         </div>
-        <div class="contact-info-item">
-          <span class="contact-info-label">Email:</span>
+        <div class="card-icon--shrink flex justify-between items-center">
+          <span>Email:</span>
           <a href="mailto:hello@psychologysquared.com.au">hello@psychologysquared.com.au</a>
         </div>
-        <div class="contact-info-item">
-          <span class="contact-info-label">Facebook Group:</span>
+        <div class="card-icon--shrink flex justify-between items-center gap-2">
+          <span>Facebook Group:</span>
           <a href="https://www.facebook.com/groups/austpsychai" target="_blank">Australian Psychology AI Community</a>
         </div>
       </div>
-    </div>
   </div>
 </section>
