--- a/beta-apps/index.html
+++ b/beta-apps/index.html
@@ -7,8 +7,7 @@ styles:
 ---
 <div class="container">
     <header class="page-header page-header--single">
-        <div class="page-header__content">
-            <!-- <div class="beta-badge">Experimental Features</div> -->
+        <div>
             <h1>BETA <span class="text-gold">APPS</span></h1>
             <p>Explore our latest AI-powered tools designed to enhance clinical workflows. These experimental features are built with cutting-edge technology and available for early testing.</p>
         </div>
