--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,7 +5,7 @@ title: AI Scribe Savings Calculator
 
 <div class="container">
   <header class="page-header page-header--single">
-    <div class="page-header__content">
+    <div>
       <h1>
         AI Scribe <span class="text-gold">Calculator</span>
       </h1>
