--- a/comparisons/index.html
+++ b/comparisons/index.html
@@ -29,9 +29,9 @@ description: Compare AI scribe companies and find the best fit for your therapy 
 </script>
 <div class="container">
   <header class="page-header page-header--single">
-    <div class="page-header__content">
+    <div>
       <h1>
-        <span class="text-gold">AI ScribE </span>Company <span style="text-decoration: underline">Comparisons</span>
+        <span class="text-gold">AI ScribE </span>Company<br><span style="text-decoration: underline">Comparisons</span>
       </h1>
       <p>
         Compare AI scribe companies and find the best fit for your therapy and
