--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
 
 <div class="container">
 <header class="page-header page-header--single">
-  <div class="page-header__content">
+  <div>
     <h1>Get In <span class="text-gold">Touch</span>
     </h1>
     <p>
