--- a/faq/index.html
+++ b/faq/index.html
@@ -20,7 +20,7 @@ subnav:
 <!-- Header -->
 <div class="container">
 <header class="page-header page-header--single">
-  <div class="page-header__content">
+  <div>
     <h1>Frequently Asked Questions</h1>
     <p>
       Straightforward answers about our services, ethics, compliance, and
