--- a/provisional-psychologists/index.html
+++ b/provisional-psychologists/index.html
@@ -79,7 +79,7 @@ description: Carefully curated AI scribe tools to help provisional psychologists
 <div class="container">
   <header class="page-header page-header--two-col">
     <div class="page-header__content">
-      <h1><u>Free</u> AI Scribes</h1>
+      <h1><u>Free</u><span class="text-gold"> AI Scribes</span></h1>
       <p>for Provisional Psychologists</p>
     </div>
     <div class="page-header__media">
