--- a/standards/index.html
+++ b/standards/index.html
@@ -7,7 +7,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
 <!-- Header -->
 <div class="container">
 <header class="page-header page-header--single">
-  <div class="page-header__content">
+  <div>
     <h1>AI Ethical Standards</h1>
     <button
       class="btn"
